<resources>
    <string name="app_name">ApkInventory</string>
    <string name="action_delete_all_entries">Eliminar todos los elementos</string>
    <string name="empty_view_title_text">No hay nada aún</string>
    <string name="empty_view_subtitle_text">Añade una base de datos primero</string>
    <string name="editor_activity_title_new_pet">Añadir un elemento</string>
    <string name="action_delete_entry">Eliminar elemento</string>
    <string name="category_overview">Datos</string>
    <string name="hint_item_name">Nombre</string>
    <string name="hint_item_quantity">Cantidad</string>
    <string name="action_save">Guardar</string>
    <string name="hint_item_price">Precio</string>
    <string name="category_description">Descripción</string>
    <string name="hint_item_description">Describe la base de datos</string>
    <string name="dollarSign">$</string>
    <string name="cardview_price_label">Precio: $</string>
    <string name="cardview_quantity_label">En inventario:&#160;</string>
    <string name="editor_insert_item_successful">Base de datos importada correctamente</string>
    <string name="editor_insert_item_failed">Ha ocurrido un error: El elemento no pudo ser guardado</string>
    <string name="action_delete_current_entry">Eliminar elemento</string>
    <string name="editor_delete_item_successful">Elemento eliminado satisfactoriamente</string>
    <string name="editor_delete_item_failed">Ha ocurrido un error: No se ha podido importar la base de datos</string>
    <string name="editor_activity_title_new_item">Añade un elemento</string>
    <string name="editor_activity_title_edit_item">Generar gráfico</string>
    <string name="editor_update_item_successful">Elemento actualizado correctamente</string>
    <string name="editor_update_item_failed">Ha ocurrido un error: El elemento no puede se actualizado</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_dialog_msg">¿Estás seguro que quieres eliminar este elemento?</string>
    <string name="delete_all_dialog_msg">¿Estás seguro que quieres eliminar todos los elementos?</string>
    <string name="return_dialog_msg">Tienes cambios sin guardar. ¿Estás seguro que quieres salir?</string>
    <string name="discard">Descartar cambios</string>
    <string name="edit">Seguir editando</string>
    <string name="sort_dialog_msg">Clasificar por</string>
    <string name="title_activity_login">Autenticación</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">La contraseña debe tener al menos 5 caracteres</string>
    <string name="login_failed">"Autenticación fallida"</string>
    <string name="title_activity_graphics">Análisis gráfico</string>
    <string-array name="number_operators">
        <item>Igual</item>
        <item>Mayor que</item>
        <item>Menor que</item>
    </string-array>
    <string-array name="spinner_options">
        <item>Motherboard</item>
        <item>Procesador</item>
        <item>RAM</item>
        <item>Almacenamiento</item>
        <item>Video</item>
        <item>Scanner</item>
        <item>Impresoras</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="anadir_atributo">Añadir Atributo</string>
    <string name="generar_grafico">Generar Gráfico</string>
    <string name="importar_base_de_datos">Importar base de datos</string>
    <string name="boton_importar_excel">Boton importar excel</string>
    <string name="filtrar_mensaje">Filtrar por</string>
    <string name="motherboard">Motherboard</string>
    <string name="procesador">Procesador</string>
    <string name="ram">RAM</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="video">Video</string>
    <string name="scanner">Scanner</string>
    <string name="impresoras">Impresoras</string>
    <string name="boton_aplicar_filtros">Aplicar Filtros</string>
</resources>
