<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin">

                <ImageView
                    android:layout_marginTop="16dp"
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:tint="@color/dodger_blue"
                    app:srcCompat="@drawable/ic_import_db"
                    android:contentDescription="@string/importar_base_de_datos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="444dp"
                    android:baselineAligned="false"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:paddingTop="32dp"
                    android:paddingBottom="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/CategoryStyle"
                            android:layout_height="62dp"
                            android:text="@string/category_overview"
                            android:textColor="#D81B60" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp">


                            <!-- Name field -->
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/edit_item_name"
                                    style="@style/EditorFieldStyle"
                                    android:hint="@string/hint_item_name"
                                    android:textColorHint="#546E7A"
                                    android:inputType="textCapWords" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="323dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/CategoryStyle"
                            android:layout_height="wrap_content"
                            android:text="@string/category_description"
                            android:textColor="#D81B60" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/edit_item_description"
                                    style="@style/EditorFieldStyle"
                                    android:hint="@string/hint_item_description"
                                    android:textColorHint="#546E7A"
                                    android:inputType="textCapWords" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:onClick="importarBaseDatosExcel"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_openfile"
            android:contentDescription="@string/boton_importar_excel" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
